--- a/Predict_holdout.ipynb
+++ b/Predict_holdout.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,13 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "pickle_in = open(\"model.pickle\",\"rb\")\n",
+    "#final_scaler = pickle.load(open('scaler.pickle','rb'))\n",
+    "final_model = pickle.load(open('model.pickle','rb'))\n",
     "holdout = pd.read_csv('./data/kc_house_data_test_features.csv', index_col=0)"
    ]
   },
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +69,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +100,7 @@
        "(4323, 84)"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -231,7 +232,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>4</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2.50</td>\n",
        "      <td>2270</td>\n",
        "      <td>11500</td>\n",
        "      <td>0</td>\n",
@@ -242,8 +243,8 @@
        "      <td>1967</td>\n",
        "      <td>0</td>\n",
        "      <td>98034</td>\n",
-       "      <td>48</td>\n",
-       "      <td>-122</td>\n",
+       "      <td>47.7089</td>\n",
+       "      <td>-122.241</td>\n",
        "      <td>2020</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -318,7 +319,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>4</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2.50</td>\n",
        "      <td>2270</td>\n",
        "      <td>11500</td>\n",
        "      <td>0</td>\n",
@@ -329,8 +330,8 @@
        "      <td>1967</td>\n",
        "      <td>0</td>\n",
        "      <td>98034</td>\n",
-       "      <td>48</td>\n",
-       "      <td>-122</td>\n",
+       "      <td>47.7089</td>\n",
+       "      <td>-122.241</td>\n",
        "      <td>2020</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -405,7 +406,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2.50</td>\n",
        "      <td>1470</td>\n",
        "      <td>1779</td>\n",
        "      <td>0</td>\n",
@@ -416,8 +417,8 @@
        "      <td>2005</td>\n",
        "      <td>0</td>\n",
        "      <td>98029</td>\n",
-       "      <td>48</td>\n",
-       "      <td>-122</td>\n",
+       "      <td>47.5472</td>\n",
+       "      <td>-121.998</td>\n",
        "      <td>1470</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -492,7 +493,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1.75</td>\n",
        "      <td>1280</td>\n",
        "      <td>16200</td>\n",
        "      <td>0</td>\n",
@@ -503,8 +504,8 @@
        "      <td>1976</td>\n",
        "      <td>0</td>\n",
        "      <td>98077</td>\n",
-       "      <td>48</td>\n",
-       "      <td>-122</td>\n",
+       "      <td>47.7427</td>\n",
+       "      <td>-122.071</td>\n",
        "      <td>1160</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -579,7 +580,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2.75</td>\n",
        "      <td>2830</td>\n",
        "      <td>8126</td>\n",
        "      <td>0</td>\n",
@@ -590,8 +591,8 @@
        "      <td>2005</td>\n",
        "      <td>0</td>\n",
        "      <td>98059</td>\n",
-       "      <td>47</td>\n",
-       "      <td>-122</td>\n",
+       "      <td>47.4863</td>\n",
+       "      <td>-122.140</td>\n",
        "      <td>2830</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -669,70 +670,77 @@
       ],
       "text/plain": [
        "   bedrooms  bathrooms  sqft_living  sqft_lot  view  condition  grade  \\\n",
-       "0         4          2         2270     11500     0          3      8   \n",
-       "1         4          2         2270     11500     0          3      8   \n",
-       "2         3          2         1470      1779     0          3      8   \n",
-       "3         3          2         1280     16200     0          3      8   \n",
-       "4         4          3         2830      8126     0          3      8   \n",
+       "0         4       2.50         2270     11500     0          3      8   \n",
+       "1         4       2.50         2270     11500     0          3      8   \n",
+       "2         3       2.50         1470      1779     0          3      8   \n",
+       "3         3       1.75         1280     16200     0          3      8   \n",
+       "4         4       2.75         2830      8126     0          3      8   \n",
        "\n",
-       "   sqft_above  sqft_basement  yr_built  yr_renovated  zipcode  lat  long  \\\n",
-       "0        1540            730      1967             0    98034   48  -122   \n",
-       "1        1540            730      1967             0    98034   48  -122   \n",
-       "2        1160            310      2005             0    98029   48  -122   \n",
-       "3        1030            250      1976             0    98077   48  -122   \n",
-       "4        2830              0      2005             0    98059   47  -122   \n",
+       "   sqft_above  sqft_basement  yr_built  yr_renovated  zipcode      lat  \\\n",
+       "0        1540            730      1967             0    98034  47.7089   \n",
+       "1        1540            730      1967             0    98034  47.7089   \n",
+       "2        1160            310      2005             0    98029  47.5472   \n",
+       "3        1030            250      1976             0    98077  47.7427   \n",
+       "4        2830              0      2005             0    98059  47.4863   \n",
        "\n",
-       "   sqft_living15  98002  98003  98004  98005  98006  98007  98008  98010  \\\n",
-       "0           2020      0      0      0      0      0      0      0      0   \n",
-       "1           2020      0      0      0      0      0      0      0      0   \n",
-       "2           1470      0      0      0      0      0      0      0      0   \n",
-       "3           1160      0      0      0      0      0      0      0      0   \n",
-       "4           2830      0      0      0      0      0      0      0      0   \n",
+       "      long  sqft_living15  98002  98003  98004  98005  98006  98007  98008  \\\n",
+       "0 -122.241           2020      0      0      0      0      0      0      0   \n",
+       "1 -122.241           2020      0      0      0      0      0      0      0   \n",
+       "2 -121.998           1470      0      0      0      0      0      0      0   \n",
+       "3 -122.071           1160      0      0      0      0      0      0      0   \n",
+       "4 -122.140           2830      0      0      0      0      0      0      0   \n",
        "\n",
-       "   98011  98014  98019  98022  98023  98024  98027  98028  98029  98030  \\\n",
+       "   98010  98011  98014  98019  98022  98023  98024  98027  98028  98029  \\\n",
        "0      0      0      0      0      0      0      0      0      0      0   \n",
        "1      0      0      0      0      0      0      0      0      0      0   \n",
-       "2      0      0      0      0      0      0      0      0      1      0   \n",
+       "2      0      0      0      0      0      0      0      0      0      1   \n",
        "3      0      0      0      0      0      0      0      0      0      0   \n",
        "4      0      0      0      0      0      0      0      0      0      0   \n",
        "\n",
-       "   98031  98032  98033  98034  98038  98039  98040  98042  98045  98052  \\\n",
-       "0      0      0      0      1      0      0      0      0      0      0   \n",
-       "1      0      0      0      1      0      0      0      0      0      0   \n",
+       "   98030  98031  98032  98033  98034  98038  98039  98040  98042  98045  \\\n",
+       "0      0      0      0      0      1      0      0      0      0      0   \n",
+       "1      0      0      0      0      1      0      0      0      0      0   \n",
        "2      0      0      0      0      0      0      0      0      0      0   \n",
        "3      0      0      0      0      0      0      0      0      0      0   \n",
        "4      0      0      0      0      0      0      0      0      0      0   \n",
        "\n",
-       "   98053  98055  98056  98058  98059  98065  98070  98072  98074  98075  \\\n",
+       "   98052  98053  98055  98056  98058  98059  98065  98070  98072  98074  \\\n",
        "0      0      0      0      0      0      0      0      0      0      0   \n",
        "1      0      0      0      0      0      0      0      0      0      0   \n",
        "2      0      0      0      0      0      0      0      0      0      0   \n",
        "3      0      0      0      0      0      0      0      0      0      0   \n",
-       "4      0      0      0      0      1      0      0      0      0      0   \n",
+       "4      0      0      0      0      0      1      0      0      0      0   \n",
        "\n",
-       "   98077  98092  98102  98103  98105  98106  98107  98108  98109  98112  \\\n",
+       "   98075  98077  98092  98102  98103  98105  98106  98107  98108  98109  \\\n",
        "0      0      0      0      0      0      0      0      0      0      0   \n",
        "1      0      0      0      0      0      0      0      0      0      0   \n",
        "2      0      0      0      0      0      0      0      0      0      0   \n",
-       "3      1      0      0      0      0      0      0      0      0      0   \n",
+       "3      0      1      0      0      0      0      0      0      0      0   \n",
        "4      0      0      0      0      0      0      0      0      0      0   \n",
        "\n",
-       "   98115  98116  98117  98118  98119  98122  98125  98126  98133  98136  \\\n",
+       "   98112  98115  98116  98117  98118  98119  98122  98125  98126  98133  \\\n",
        "0      0      0      0      0      0      0      0      0      0      0   \n",
        "1      0      0      0      0      0      0      0      0      0      0   \n",
        "2      0      0      0      0      0      0      0      0      0      0   \n",
        "3      0      0      0      0      0      0      0      0      0      0   \n",
        "4      0      0      0      0      0      0      0      0      0      0   \n",
        "\n",
-       "   98144  98146  98148  98155  98166  98168  98177  98178  98188  98198  98199  \n",
-       "0      0      0      0      0      0      0      0      0      0      0      0  \n",
-       "1      0      0      0      0      0      0      0      0      0      0      0  \n",
-       "2      0      0      0      0      0      0      0      0      0      0      0  \n",
-       "3      0      0      0      0      0      0      0      0      0      0      0  \n",
-       "4      0      0      0      0      0      0      0      0      0      0      0  "
+       "   98136  98144  98146  98148  98155  98166  98168  98177  98178  98188  \\\n",
+       "0      0      0      0      0      0      0      0      0      0      0   \n",
+       "1      0      0      0      0      0      0      0      0      0      0   \n",
+       "2      0      0      0      0      0      0      0      0      0      0   \n",
+       "3      0      0      0      0      0      0      0      0      0      0   \n",
+       "4      0      0      0      0      0      0      0      0      0      0   \n",
+       "\n",
+       "   98198  98199  \n",
+       "0      0      0  \n",
+       "1      0      0  \n",
+       "2      0      0  \n",
+       "3      0      0  \n",
+       "4      0      0  "
       ]
      },
-     "execution_count": 144,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +782,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,28 +800,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 8,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-4.194803e+16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-4.194803e+16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-8.301191e+16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-9.293404e+16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8.104713e+16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4318</th>\n",
+       "      <td>-4.705645e+16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4319</th>\n",
+       "      <td>2.907873e+16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4320</th>\n",
+       "      <td>-9.715832e+16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4321</th>\n",
+       "      <td>-3.968853e+16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4322</th>\n",
+       "      <td>-9.706008e+16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4323 rows × 1 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([2.66696630e+10, 2.66696630e+10, 1.98180109e+10, ...,\n",
-       "       1.95422882e+10, 2.02420484e+10, 1.93487373e+10])"
+       "             price\n",
+       "0    -4.194803e+16\n",
+       "1    -4.194803e+16\n",
+       "2    -8.301191e+16\n",
+       "3    -9.293404e+16\n",
+       "4     8.104713e+16\n",
+       "...            ...\n",
+       "4318 -4.705645e+16\n",
+       "4319  2.907873e+16\n",
+       "4320 -9.715832e+16\n",
+       "4321 -3.968853e+16\n",
+       "4322 -9.706008e+16\n",
+       "\n",
+       "[4323 rows x 1 columns]"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joblib_file = \"model.pkl\"  \n",
-    "final_model = joblib.load(joblib_file)\n",
+    "# joblib_file = \"model.pkl\"  \n",
+    "# final_model = joblib.load(joblib_file)\n",
     "final_answers = final_model.predict(transformed_holdout)\n",
-    "final_answers"
+    "final_answers = pd.DataFrame(final_answers)\n",
+    "final_answers.rename(columns={0:'price'})"
    ]
   },
   {
@@ -825,13 +918,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_answer = pd.DataFrame(final_predictions)\n",
-    "final_answer.to_csv('housing_preds_ismael_araujo.csv')"
+    "final_answer = final_model.predict(transformed_holdout)\n",
+    "final_answers.to_csv('housing_preds_ismael_araujo.csv')\n",
+    "\n",
+    "\n",
+    "# I was not able to replicate the same results for the test file and could not identify the problem."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
