--- a/KingsCountyHousingPrices.ipynb
+++ b/KingsCountyHousingPrices.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Kings County Housing Prices Bakeoff\n",
-    "\n"
+    "# Kings County Housing Prices Bakeoff\n"
    ]
   },
   {
