--- a/notebooks/Modeling.ipynb
+++ b/notebooks/Modeling.ipynb
@@ -764,9 +764,7 @@
      ]
     }
    ],
-   "source": [
-    "train.isna().any()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -783,7 +781,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Create preliminary data visualizations\n",
     "\n",
@@ -804,6 +804,7 @@
      "end_time": "2021-03-31T21:19:14.995175Z",
      "start_time": "2021-03-31T21:19:14.976175Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -849,6 +850,7 @@
      "end_time": "2021-03-31T21:19:16.634373Z",
      "start_time": "2021-03-31T21:19:15.522042Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -934,7 +936,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "<strong>IMPORTANT:</strong> The matrix below takes several seconds/minutes to run. For this reason it will be kept commented to make sure that the kernel can restarted and ran faster. In case you want to see it, uncomment the code bellow."
    ]
@@ -946,7 +950,8 @@
     "ExecuteTime": {
      "end_time": "2021-03-31T21:19:16.636977Z",
      "start_time": "2021-03-31T21:19:16.082Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -963,6 +968,7 @@
      "end_time": "2021-03-31T21:19:16.638665Z",
      "start_time": "2021-03-31T21:19:16.568Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [],
@@ -979,7 +985,8 @@
     "ExecuteTime": {
      "end_time": "2021-03-31T21:19:17.383636Z",
      "start_time": "2021-03-31T21:19:17.369862Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1024,6 +1031,7 @@
      "end_time": "2021-03-31T21:19:17.990253Z",
      "start_time": "2021-03-31T21:19:17.974502Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -1048,7 +1056,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We will run a preliminary OLS Regression Result to understand if the sqft_living feature can predict price. It's a very early stage but it will help me to better understand the data set"
    ]
@@ -1061,6 +1071,7 @@
      "end_time": "2021-03-31T21:19:18.828992Z",
      "start_time": "2021-03-31T21:19:18.812371Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -1094,6 +1105,7 @@
      "end_time": "2021-03-31T21:19:19.617606Z",
      "start_time": "2021-03-31T21:19:19.604708Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -1121,6 +1133,7 @@
      "end_time": "2021-03-31T21:19:20.528375Z",
      "start_time": "2021-03-31T21:19:20.498010Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -1156,7 +1169,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Let's also make sure that we are only seeing data of the Seattle region. To do so, let's create a heatmap using the latitude and longetude."
    ]
@@ -1168,7 +1183,8 @@
     "ExecuteTime": {
      "end_time": "2021-03-31T21:19:22.135818Z",
      "start_time": "2021-03-31T21:19:21.851459Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1210,7 +1226,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Findings:\n",
     "- The histogram with all of the features showed us the distribution of the data set. Some of the them might need a log transformation\n",
@@ -14636,7 +14654,7 @@
    "base_numbering": 1,
    "nav_menu": {},
    "number_sections": true,
-   "sideBar": false,
+   "sideBar": true,
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
@@ -14645,7 +14663,7 @@
     "height": "683px",
     "left": "24px",
     "top": "110px",
-    "width": "238.59375px"
+    "width": "261.1875px"
    },
    "toc_section_display": true,
    "toc_window_display": true
